--- a/src/components/Profile/Data/styles.scss
+++ b/src/components/Profile/Data/styles.scss
@@ -1,3 +1,45 @@
 .data-container {
-  padding: 10px;
+  padding-top: 10px;
+
+  .detail-user {
+    text-align: left;
+    margin-left: 16px;
+    font-size: 14px;
+
+    b {
+      font-weight: bold;
+      color: gray;
+    }
+  }
+
+  .email-section {
+    padding-bottom: 10px;
+  }
+
+  .add-friend-section {
+    height: 60px;
+    padding-top: 17px;
+    background: #5BD1B7;
+    color: whitesmoke;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
+  .added-friend-section {
+    height: 60px;
+    padding-top: 17px;
+    background: #066696;
+    color: white;
+    font-size: 18px;
+    cursor: default;
+  }
+
+  .delete-friend-section {
+    height: 60px;
+    padding-top: 17px;
+    background: #892f2f;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+  }
 }
